--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,61 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+* {
+    box-sizing: border-box;
+}
+
+header {	
+	margin: 30px;
+	
+}
+a{
+	width: 100%;
+	margin: 40px;
+	margin-bottom: 40px;
+	padding: 15px 10px;	
+	font-size: 20px;
+	text-decoration: none;
+	color: grey;
+	
+
+}
+.logo{
+	position: absolute;
+	left: 80%;
+	top: 3%;
+	
+}
+
+ .container{
+	width: 75%;
+	/* display: inline; */
+	border: 2px solid red;
+
+
+}
+ h1{
+	
+	font-size: 50px;
+	margin: 10px;
+	padding: 5px 10px;
+	
+	left: 2%;
+	border: 2px solid red;
+} 
+ button{
+	width: 20%;
+	margin:30px;
+	padding:20px;
+	border: 2px solid red;
+ }
+ 
+ .header img {
+	width: 80%;
+	margin:80px; 
+	padding:30px;
+	position: relative;
+	left: 70%;
+	bottom: 100%;
+ } 
