--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -123,10 +123,10 @@ a{
 	bottom: 100%;
  } 
 
- /* .middle{
+ .middle{
 	 width: 100%;
  }
  .middle h2{
-	 border: 2px solid red:
+	 border: 2px solid red;
 
- } */
+ }
